fix turbolink issue and add z-index to navbar and player to avoid overlapping

--- a/app/javascript/stylesheets/index.css
+++ b/app/javascript/stylesheets/index.css
@@ -1,2 +1,5 @@
 @import 'player.css';
 @import 'dropdown_heart.css';
+.navbar-main {
+  z-index: 1000;
+}
